# Chess-CPP

./: CMakeLists.txt  LICENSE  README.md  main.cpp
src/: Board.cpp  Board.h  MoveValidator.cpp  MoveValidator.hpp  Piece.cpp  Piece.h  PieceFactory.cpp  PieceFactory.hpp  Position.cpp  Position.h
src/board/: Board.cpp  Board.h  Board.hpp  ChessBoard.cpp  ChessBoard.hpp  Position.cpp  Position.h  Position.hpp
src/board/move-getter/: BoardPossibleMoveGetter.cpp  BoardPossibleMoveGetter.hpp
src/board/move-validation/: AttackedPositionChecker.cpp  AttackedPositionChecker.hpp  MoveDirection.cpp  MoveDirection.hpp  MoveEndGameChecker.cpp  MoveEndGameChecker.hpp  MoveLegalityChecker.cpp  MoveLegalityChecker.hpp  MovePossibilityChecker.cpp  MovePossibilityChecker.hpp  MoveStatusChecker.cpp  MoveStatusChecker.hpp  MoveTypes.cpp  MoveTypes.hpp  MoveValidator.cpp  MoveValidator.hpp  PositionAttackChecker.cpp  PositionAttackChecker.hpp
src/board/position-getter/: BoardPositionGetter.cpp  BoardPositionGetter.hpp
src/game/: GamePlay.cpp  GamePlay.hpp  Player.hpp
src/gui/: ChessBoardView.cpp  ChessBoardView.hpp  PieceView.cpp  PieceView.hpp
src/pieces/: Bishop.cpp  Bishop.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Pawn.cpp  Pawn.hpp  Piece.cpp  Piece.h  Piece.hpp  PieceFactory.cpp  PieceFactory.hpp  Queen.cpp  Queen.hpp  Rook.cpp  Rook.hpp
src/pieces/types/: Bishop.cpp  Bishop.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Pawn.cpp  Pawn.hpp  Queen.cpp  Queen.hpp  Rook.cpp  Rook.hpp
src/players/ai/: PlayerSmartAI.cpp  PlayerSmartAI.hpp  PlayerStupidAI.cpp  PlayerStupidAI.hpp
src/players/human/: PlayerConsoleInput.cpp  PlayerConsoleInput.hpp
src/user-interface/human-machine-interface/: ChessBoardPlayerInput.hpp  ChessBoardView.cpp  ChessBoardView.hpp  PieceView.cpp  PieceView.hpp
src/user-interface/text-based-interface/: ChessBoardConsoleView.cpp  ChessBoardConsoleView.hpp  ChessBoardPlayerInterfaceTextBased.cpp  ChessBoardPlayerInterfaceTextBased.hpp  PieceConsoleView.cpp  PieceConsoleView.hpp
src/utility/: BoardPositionGetter.cpp  BoardPositionGetter.hpp  MoveChecker.cpp  MoveChecker.hpp  MoveLegalityCheck.cpp  MoveLegalityCheck.hpp  MoveLegalityChecker.cpp  MoveLegalityChecker.hpp  MoveValidator.cpp  MoveValidator.hpp  MoveValidityCheck.cpp  MoveValidityCheck.hpp  MoveValidityChecker.cpp  MoveValidityChecker.hpp  Moves.hpp  PositionAttackChecker.cpp  PositionAttackChecker.hpp
test/: DrawTest.cpp
